# cookiecutter-pypackage

./: .gitignore  LICENSE  Makefile  README.rst  cookiecutter.json  mypy.ini  requirements_dev.txt  setup.cfg  tox.ini
.github/ISSUE_TEMPLATE/: bug-report.md
docs/: conf.py
hooks/: post_gen_project.py
tests/: test_bake_project.py
{{cookiecutter.project_slug}}/: .flake8  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.rst  Makefile  README.rst  SECURITY.md  mypy.ini  requirements_dev.txt  setup.cfg  tox.ini
{{cookiecutter.project_slug}}/.github/ISSUE_TEMPLATE/: bug-report.md  documentation.md  feature-request.md
{{cookiecutter.project_slug}}/docs/: conf.py
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  cli.py
