[bdist_wheel]
universal = 1

[flake8]
exclude = docs
per-file-ignores =
	__init__.py: F401
max-line-length = 88
extend-ignore = E203

[aliases]
test = pytest

[tool:pytest]
addopts = --doctest-modules
collect_ignore = ['setup.py']
doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL NUMBER
testpaths =
    tests

[metadata]
author = Jacob Reinhold
author_email = jcreinhold@gmail.com
name = cookiecutter-pypackage
version = 0.1.0
description = cookicutter template for a python package
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = cookiecutter, template, package
license = BSD
url = https://github.com/jcreinhold/cookiecutter-pypackage
classifiers =
	Development Status :: 2 - Pre-Alpha
    Environment :: Console
	Intended Audience :: Developers
    License :: OSI Approved :: BSD License
	Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.6
