[bumpversion]
current_version = {{ cookiecutter.version }}
commit = True
tag = True

[bumpversion:file:{{ cookiecutter.project_slug }}/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[flake8]
exclude = docs

{%- if cookiecutter.use_pytest == 'y' %}
[aliases]
test = pytest

[tool:pytest]
addopts = --doctest-modules
collect_ignore = ['setup.py']
doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL NUMBER
{%- endif %}

{%- set license_classifiers = {
    'MIT license': 'License :: OSI Approved :: MIT License',
    'BSD license': 'License :: OSI Approved :: BSD License',
    'ISC license': 'License :: OSI Approved :: ISC License (ISCL)',
    'Apache Software License 2.0': 'License :: OSI Approved :: Apache Software License',
    'GNU General Public License v3': 'License :: OSI Approved :: GNU General Public License v3 (GPLv3)'
} %}

[metadata]
author = {{ cookiecutter.full_name.replace('\"', '\\\"') }}
author_email = {{ cookiecutter.email }}
name = {{ cookiecutter.project_slug }}
version = attr: {{ cookiecutter.project_slug }}.__version__
description = {{ cookiecutter.project_short_description }}
long_description = file: README.rst, HISTORY.rst
long_description_content_type = text/x-rst
keywords = {{ cookiecutter.project_slug }}
{%- if cookiecutter.open_source_license in license_classifiers %}
license = {{ cookiecutter.open_source_license }}
{%- endif %}
url = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}
project_urls =
	Bug Tracker = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}/issues
	Documentation = https://{{ cookiecutter.project_slug }}.readthedocs.io/
classifiers =
	Development Status :: 2 - Pre-Alpha
	Intended Audience :: Developers
    {%- if cookiecutter.open_source_license in license_classifiers %}
    {{ license_classifiers[cookiecutter.open_source_license] }}
    {%- endif %}
	Natural Language :: English
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >= 3.6
install_requires =
    {%- if cookiecutter.command_line_interface|lower == 'click' %}
    Click>=7.0
    {%- endif %}
test_suite = tests

[options.packages.find]
include =
    {{ cookiecutter.project_slug }}
    {{ cookiecutter.project_slug }}.*
exclude =
	tests
	docs

[options.entry_points]
console_scripts =
    {%- if 'no' not in cookiecutter.command_line_interface|lower %}
    {{ cookiecutter.project_slug }}={{ cookiecutter.project_slug }}.cli:main
    {%- endif %}
